--- a/templates/store/products/detail.html
+++ b/templates/store/products/detail.html
@@ -157,6 +157,22 @@
                             <ul id="messages" class="messages">
                             </ul>
                         </div>
+                        <div class="chat-message-product" id="chat-message-product">
+                            <input type="hidden" id="product" value="{{ product.slug }}">
+                            <div class="row">
+                                <div class="col-3">
+                                    <div style="background-image: url('/media/{{product.image}}'); background-size: cover; height: 70px; width: 70px; padding: 10px;"></div>
+                                </div>
+                                <div class="col-9">
+                                    <div style="padding-right: 30px; overflow: hidden; line-height: 1.5; height: 40px;">{{ product.title }}</div>
+                                    <div style="position: absolute; top: 10px; right: 10px;">
+                                        <button type="button" class="close" aria-label="Close" onclick="closeProduct()">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <div class="chat-message-board">
                             <input placeholder="Tulis pesan..." style="width: 100%; border: 1px solid #e5e7e9 !important; border-radius: 20px !important;" id="chat-input">
                         </div>
