update for comment reply
Signed-off-by: maulana saputra <maulana.saputra@aqi.co.id>

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -191,3 +191,16 @@
     position: absolute;
     bottom: 40px;
 }
+
+.dropdown-reply {
+    display: none;
+}
+
+.dropdown-reply a {
+    display: block;
+}
+
+.dropdown-reply-show {
+    display: block;
+    padding: 20px;
+}
